manuscript/page-2/style.css
body {
  padding-bottom: 3em;
  background:#000;
}


section p:first-of-type:first-letter {
  color: #fcf704;
  float: left;
  font-size: 20vw;
  line-height: 1;
  margin-top: -0.1vw;
  margin-bottom: -0.1vw;
  margin-right: 2vw;
}

img {
  max-width: 100%;
  margin-bottom: 1.33em;
  vertical-align: middle;
}

blockquote {
  border-left: 0.2em solid #fcf704;
  font-size: 4vw;
  padding: 1vw 2vw;
  line-height: 1.5;
  margin-left: 0;
  margin-right: 0;
  quotes: "“" "”" "‘" "’";
}
blockquote::before, blockquote::after {
  color: #fcf704;
  font-size: 1.25em;
  line-height: 0;
}
blockquote::before {
  content: open-quote;
}
blockquote::after {
  content: close-quote;
}
.copy {
  font: 3vw Georgia, Serif;
  text-align: justify;
  -moz-column-count: 2;
  -moz-column-gap: 4vw;
  -webkit-column-count: 2;
  -webkit-column-gap: 4vw;
}

.copy p {
  margin: 0 0 5vw 0;
}

.right {
  float:right;
}

